--- a/package.json
+++ b/package.json
@@ -1,35 +1,44 @@
 {
-  "name": "spasock-base",
+  "name": "spa-tutorial",
   "version": "1.0.0",
-  "description": "A SPA built using Webpack and Express",
+  "description": "",
   "main": "index.js",
   "scripts": {
     "dev": "webpack-dev-server --hot --inline --config build/base.config.js",
-    "build": "rimraf ./dist && NODE_ENV=production webpack --config build/base.config.js",
+    "build": "rimraf ./dist && NODE_ENV=production webpack --config build/webpack.config.js --hide-modules --progress",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/spasock/base.git"
-  },
-  "author": "Frink",
+  "author": "Roman Kinyakin <1@grep.su>",
   "license": "UNLICENSED",
-  "bugs": {
-    "url": "https://github.com/spasock/base/issues"
-  },
-  "homepage": "https://github.com/spasock/base#readme",
   "devDependencies": {
-    "babel-core": "^6.26.3",
-    "babel-loader": "^8.0.4",
-    "babel-preset-env": "^1.7.0",
-    "html-webpack-plugin": "^3.2.0",
-    "rimraf": "^2.6.2",
-    "webpack": "^4.26.0",
-    "webpack-dev-server": "^3.1.10"
+    "assets-webpack-plugin": "^3.5.1",
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
+    "babel-preset-env": "^1.6.0",
+    "css-loader": "^0.28.5",
+    "dotenv": "^4.0.0",
+    "extract-text-webpack-plugin": "^3.0.0",
+    "file-loader": "^0.11.2",
+    "html-webpack-plugin": "^2.30.1",
+    "node-sass": "^4.5.3",
+    "raw-loader": "^0.5.1",
+    "rimraf": "^2.6.1",
+    "sass-loader": "^6.0.6",
+    "style-loader": "^0.18.2",
+    "url-loader": "^0.5.9",
+    "webpack": "^3.5.5",
+    "webpack-bundle-analyzer": "^2.9.0",
+    "webpack-dev-server": "^2.7.1"
   },
   "dependencies": {
-    "@babel/core": "^7.1.6",
-    "babel": "^6.23.0",
-    "webpack-cli": "^3.1.2"
+    "bootstrap": "^4.0.0-beta",
+    "handlebars": "^4.0.10",
+    "highlight.js": "^9.12.0",
+    "jquery": "^3.2.1",
+    "lodash": "^4.17.4",
+    "moment": "^2.18.1",
+    "navigo": "^5.3.1",
+    "popper.js": "^1.12.3",
+    "remarkable": "^1.7.1"
   }
 }
