--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "url-loader": "^0.5.9",
     "webpack": "^3.5.5",
     "webpack-bundle-analyzer": "^2.9.0",
+    "webpack-cli": "^3.1.2",
     "webpack-dev-server": "^2.7.1"
   },
   "dependencies": {
